[package]
name = "bliss"
version = "0.1.0"
authors = ["Andrew Kachnic <ajkachnic@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["lib"]

[dependencies]
lib = { path = "lib" }
rustyline = "7.1.0"